--- a/Kyvyt.html
+++ b/Kyvyt.html
@@ -17,8 +17,8 @@
 	</div>
 			
 <ul id="navigation">
-		<li class="active">	<a href="index.html">Main</a></li>
-<li><a href="Kyvyt.html">Kyvyt</a></li>
+		<li>	<a href="index.html">Main</a></li>
+<li class="active"><a href="Kyvyt.html">Kyvyt</a></li>
 <li><a href="Kuvat.html">Kuvat</a></li>
 <li><a href="Itse.html">Itse</a></li>
 <li><a href="Contact.html">Contact</a></li>
