--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@ Tarkoitus on lisätä kaikenlaista omatekemääni sisältöä ja jalostaa intern
 	<a href="http://www.freewebsitetemplates.com/misc/contact/" target="_blank" class="tumbler"></a>
 			</div>
 			<p>	© 2017 Artturi.Peijonen. All Rights Reserved. Oikeudet pidätetään.</p>
+			
+<a href="https://hierojatampere.fi/hierontalahjakortti/"><img src="http://laskuri.omasivu.fi/0034855af61cbc5ec9dbe568cf54e1f7ba207fb9/5603.gif" alt="lahjakortti hierontaan"></a>
+
 	</div>
 	</div>
 	
