--- a/Kyvyt.html
+++ b/Kyvyt.html
@@ -30,7 +30,7 @@
 	
 <div id="adbox">
 <div class="clearfix">
-	<img src="images/profile.jpg" alt="Img" height="342" width="368">
+	<img href="images/profile.jpg" alt="Img" height="342" width="368">
 	
 <div>
 <h1>Projektio</h1>
@@ -50,7 +50,7 @@ Ihminen on sitä mitä hän syö sanoi Juice Leskinen.
 </div>
 	
 <div id="tagline" class="clearfix">
-		</div><float:right>	<p>		TÄmä Teksit VARMAAN POIS</p>
+		</div><float:right>	<p>		</p>
 	</div>
 	</div>
 	
